--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,12 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="space_148">148dp</dimen>
+    <dimen name="space_128">128dp</dimen>
+    <dimen name="space_32">32dp</dimen>
+    <dimen name="space_16">16dp</dimen>
+    <dimen name="space_8">14dp</dimen>
+    <dimen name="mid_size">20dp</dimen>
 </resources>
